--- a/src/app/shared/track-table/track-table.component.scss
+++ b/src/app/shared/track-table/track-table.component.scss
@@ -216,3 +216,12 @@ table{
   color: var(--light);
 }
 
+.selected{
+  background: var(--light-black);
+}
+.preview{
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  background: var(--light-black);
+}
