--- a/src/app/core/sidenav/user-playlist-list/user-playlist-list.component.scss
+++ b/src/app/core/sidenav/user-playlist-list/user-playlist-list.component.scss
@@ -4,6 +4,8 @@
   justify-content: flex-start;
   gap: 10px;
   padding: 7.5px;
+  border-radius: 5px;
+  border: 3px solid transparent;
   &:hover{
     background: var(--secondary-black);
     .info{
@@ -71,3 +73,6 @@
   }
 }
 
+.drop-to{
+  border: 3px solid var(--main-color);
+}
