--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -64,11 +64,11 @@
       </button>
     </div>
     <div class="bottom">
-      <p>{{audioService.currentTime | date: 'mm:ss'}}</p>
+      <p>{{audioService.currentTime | formatDuration}}</p>
       <mat-slider class="slider" discrete [displayWith]="formatTime" step="0" [max]="audioService.duration" [min]="0">
         <input #slider matSliderThumb [value]="audioService.currentTime" [min]="0" [max]="audioService.duration" type="range" (change)="seekTo(slider.value)" class="slider">
       </mat-slider>
-      <p>{{audioService.duration | date: 'mm:ss'}}</p>
+      <p>{{audioService.duration | formatDuration}}</p>
     </div>
   </div>
   <div class="right">
