--- a/src/app/artists/artist-round-card/artist-round-card.component.scss
+++ b/src/app/artists/artist-round-card/artist-round-card.component.scss
@@ -2,13 +2,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 20px;
-  width: 150px;
+  width: 180px;
   height: auto;
+  padding: 10px;
+  background: var(--secondary-black);
+  border-radius: 5px;
+  transition: .1s ease-in-out;
+  &:hover{
+    background: var(--light-black);
+  }
   img{
     width: 100%;
     border-radius: 50%;
+    box-shadow: 0 8px 24px rgba(0,0,0,.5);
   }
   p{
     &:nth-child(2){
