--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -16,8 +16,9 @@
     padding-right: 20px;
     button{
       background: var(--light-black);
-      border-radius: 20px;
-      padding: 10px 20px;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
       color: var(--primary-text);
       border: none;
       font-size: 14px;
