--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -14,6 +14,9 @@
   box-shadow: 0px 25px 20px -20px rgba(0, 0, 0, 0.45);
   .right{
     padding-right: 20px;
+    img{
+      width: 100%;
+    }
     button{
       background: var(--light-black);
       border-radius: 50%;
