--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,17 +1,27 @@
 
 <ng-container *ngIf="userService.userLoaded(); else loading">
   <div class="profile">
-    <div class="top">
-      <h1>Welcome back {{user.first_name}}</h1>
-      <div class="row">
-        <p>{{user.following_count}} Following</p>
-        <div class="divider-h"></div>
-        <p>{{user.playlists_count}} Playlists</p>
+    <div class="top" #cover>
+      <div class="left">
+        <img src="{{user.cover}}"/>
       </div>
+      <div class="right">
+        <p>Profile</p>
+        <h1>{{user.first_name}} {{user.last_name}}</h1>
+        <div class="row">
+          <p>{{user.following_count}} Following</p>
+          <div class="divider-h"></div>
+          <p>{{user.playlists_count}} Playlists</p>
+        </div>
+      </div>
+
     </div>
     <div class="bottom">
       <div class="section">
-        <h1>Playlists</h1>
+        <div class="top-section">
+          <h1>Playlists</h1>
+          <a *ngIf="user.playlists_count > 5">See more</a>
+        </div>
         <div class="row">
           <ng-container *ngIf="playlists.length; else noPlaylists">
             <ng-container *ngFor="let playlist of playlists">
@@ -25,9 +35,18 @@
 
       </div>
       <div class="section">
-        <h1>Following</h1>
+        <div class="top-section">
+          <h1>Following</h1>
+          <a *ngIf="user.following_count > 6">See more</a>
+        </div>
         <ng-container *ngIf="user.following_count > 0; else noFollowings">
-          <app-following [following]="user.following"></app-following>
+          <!--<app-following [following]="user.following"></app-following>-->
+          <div class="row">
+            <ng-container *ngFor="let artist of user.following">
+              <app-artist-round-card [artist]="artist"></app-artist-round-card>
+            </ng-container>
+          </div>
+
         </ng-container>
         <ng-template #noFollowings>
           You are not following any artist yet..
