--- a/src/app/artists/artist-detail/artist-detail.component.html
+++ b/src/app/artists/artist-detail/artist-detail.component.html
@@ -25,7 +25,7 @@
   </ng-container>
     </div>
   <ng-container *ngIf="loaded">
-    <div class="bottom">
+    <div class="bottom" #bottom>
 
       <div class="section">
 
