--- a/src/app/playlists/playlist-detail/playlist-detail.component.scss
+++ b/src/app/playlists/playlist-detail/playlist-detail.component.scss
@@ -1,5 +1,6 @@
 .playlist{
   padding: 20px;
+  background: var(--playlist);
   .top{
     display: flex;
     flex-direction: column;
@@ -16,7 +17,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background: var(--secondary-black);
+        background: var(--playlist);
         box-shadow: 5px 5px 15px #090909;
         border-radius: 5px;
           img{
