--- a/src/app/queue/queue.component.scss
+++ b/src/app/queue/queue.component.scss
@@ -13,6 +13,7 @@
   justify-content: center;
   background: var(--queue);
   .background{
+    transition: background .3s ease-in-out;
     width: 100%;
     height: 100%;
     background: linear-gradient(180deg, rgba(35, 35, 35, 0) 10%, rgba(10, 10, 10, 0.7) 50%, #0a0a0a 100%);
