--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -14,6 +14,7 @@
   </thead>
   <tbody cdkDropList class="list" (cdkDropListDropped)="drop($event)" cdkDropListSortingDisabled>
     <ng-container *ngFor="let track of tracks;let index = index; trackBy: trackById" >
+      @defer(on viewport){
       <tr  cdkDrag (cdkDragDropped)="onDragDropped($event)" (cdkDragStarted)="onDragStarted($event)" class="item" [ngClass]="{'selected' : selectedTracks.has(track.id)}" (click)="selectTrack($event, track.id,track)" (contextmenu)="openMenuOnRightClick($event, track)" (dblclick)="playAllFromIndex(tracks, index, from)">
         <ng-container *ngIf="selectedTracks.size > 0; else oneSelected">
           <p *cdkDragPreview class="preview">{{selectedTracks.size}} tracks selected</p>
@@ -140,6 +141,10 @@
           </mat-menu>
         </td>
       </tr>
+      }
+      @placeholder {
+      <app-loading></app-loading>
+      }
 
     </ng-container>
 
