--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,7 @@ a{
     flex-direction: column;
   }
   .mat-mdc-menu-item{
+    height: 10px;
     background: var(--primary-black);
     color: var(--primary-text);
     font-size: 13px;
