--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,8 +1,8 @@
 <div class="player"  #player>
     <div class="left">
       <div class="image">
-        <ng-container *ngIf="from.imageFrom; else other">
-          <img src="{{from.imageFrom}}" alt="cover">
+        <ng-container *ngIf="currentTrack.cover; else other">
+          <img src="{{currentTrack.cover}}" alt="cover">
         </ng-container>
         <ng-template #other>
           <img *ngIf="currentTrack.album" src="{{currentTrack.album?.cover}}" alt="cover">
@@ -64,11 +64,11 @@
       </button>
     </div>
     <div class="bottom">
-      <p>{{audioService.currentTime | formatDuration}}</p>
+      <p>{{audioService.currentTime | duration}}</p>
       <mat-slider class="slider" discrete [displayWith]="formatTime" step="0" [max]="audioService.duration" [min]="0">
         <input #slider matSliderThumb [value]="audioService.currentTime" [min]="0" [max]="audioService.duration" type="range" (change)="seekTo(slider.value)" class="slider">
       </mat-slider>
-      <p>{{audioService.duration | formatDuration}}</p>
+      <p>{{audioService.duration | duration}}</p>
     </div>
   </div>
   <div class="right">
